# ai-corsair-hub

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  check_lhm.ps1  config.example.toml
.claude/: settings.local.json
.github/workflows/: release-dryrun.yml  release.yml
apps/gui/: Cargo.toml  config.toml  package-lock.json  package.json  tauri.conf.json
apps/gui/capabilities/: default.json
apps/gui/icons/: icon.icns
apps/gui/nsis/: hooks.nsi
apps/gui/src/: commands.rs  dto.rs  hardware_thread.rs  lib.rs  main.rs  state.rs
apps/gui/ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/gui/ui/src/: App.svelte  app.css
apps/gui/ui/src/components/dashboard/: Dashboard.svelte  FanCard.svelte  MiniChart.svelte  PresetStrip.svelte  PsuPanel.svelte  TempCard.svelte
apps/gui/ui/src/components/devices/: DevicePanel.svelte  DevicePickerModal.svelte  HubDetail.svelte
apps/gui/ui/src/components/fans/: CurveEditor.svelte  FanGroupCard.svelte  FanGroups.svelte  ModeSelector.svelte  PidTuner.svelte
apps/gui/ui/src/components/layout/: TabBar.svelte  Titlebar.svelte
apps/gui/ui/src/components/lighting/: ColorPicker.svelte  EffectControls.svelte  EffectPicker.svelte  FanPreview.svelte  GradientEditor.svelte  HardwarePreview.svelte  LayerStack.svelte  Lighting.svelte  PresetManager.svelte  StripPreview.svelte  ZonePanel.svelte
apps/gui/ui/src/components/settings/: Settings.svelte
apps/gui/ui/src/lib/: api.ts  identity.ts  types.ts
apps/gui/ui/src/lib/stores/: config.svelte.ts  rgb.svelte.ts  sensors.svelte.ts
apps/rgb-test/: Cargo.toml
apps/rgb-test/src/: main.rs
apps/scanner/: Cargo.toml
apps/scanner/src/: main.rs
apps/service/: Cargo.toml
apps/service/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: atomic_write.rs  config.rs  config_migration.rs  identity.rs  lib.rs  types.rs
crates/fancontrol/: Cargo.toml
crates/fancontrol/src/: acoustic.rs  control_loop.rs  curve.rs  lib.rs  pid.rs
crates/hid/: Cargo.toml
crates/hid/src/: corsair_psu.rs  discovery.rs  icue_link.rs  lib.rs
crates/rgb/: Cargo.toml
crates/rgb/src/: color.rs  effect.rs  flow.rs  frame.rs  layer.rs  layout.rs  lib.rs  noise.rs  renderer.rs  transition.rs
crates/rgb/src/effects/: aurora.rs  breathing.rs  candle.rs  color_cycle.rs  duty_meter.rs  fire.rs  gradient.rs  mod.rs  rain.rs  rainbow_wave.rs  spectrum_shift.rs  starfield.rs  static_color.rs  temperature_map.rs  thermal_pulse.rs
crates/sensors/: Cargo.toml
crates/sensors/src/: cpu.rs  gpu.rs  lhm.rs  lib.rs  psu.rs
docs/: architecture.md  pump-control-analysis.md  rgb-protocol.md
scripts/: build-release.ps1  bump-version.ps1  create-issues.ps1  dev-setup.ps1  scan_usb.ps1
