[package]
name = "corsair-hub-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
corsair-common = { workspace = true }
corsair-hid = { workspace = true }
corsair-rgb = { workspace = true }
corsair-sensors = { workspace = true }
corsair-fancontrol = { workspace = true }
tauri = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
tauri-plugin-updater = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
anyhow = { workspace = true }
toml = { workspace = true }
