[package]
name = "corsair-common"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
corsair-rgb = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
