[package]
name = "corsair-hid"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
corsair-common = { workspace = true }
hidapi = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
